--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,9 @@ classifiers = [
         "Topic :: Software Development",
 ]
 dependencies = [
-        "tensorflow>=2.5.*",
-        "pandas>=1.3.*",
-        "matplotlib>=3.6.2"
+        "tensorflow~=2.5",
+        "pandas~=1.3",
+        "matplotlib~=3.6"
 ]
 dynamic = ["version"]
 
