--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,4 +21,4 @@ jobs:
         python -m pip install --upgrade pip
         pip install .[test]
     - name: Test with pytest
-      run: pytest
+      run: pytest -n auto
