--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,3 +26,10 @@ repos:
     args: [--autofix]
   - id: pretty-format-ini
     args: [--autofix]
+- repo: https://github.com/commitizen-tools/commitizen
+  rev: v3.14.1
+  hooks:
+  - id: commitizen
+  - id: commitizen-branch
+    stages:
+    - push
