--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,7 +53,10 @@ test = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/MArpogaus/tensorflow_time_series_dataset"
+Changelog = "https://github.com/MArpogaus/tensorflow_time_series_dataset/blob/dev/CHANGELOG.md"
+Documentation = "https://marpogaus.github.io/tensorflow_time_series_dataset"
+Issues = "https://github.com/MArpogaus/tensorflow_time_series_dataset/issues"
+Repository = "https://github.com/MArpogaus/tensorflow_time_series_dataset"
 
 [tool.commitizen]
 major_version_zero = true
