--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
   "Topic :: Software Development"
 ]
 dependencies = [
-  "tensorflow>=2.5",
+  "tensorflow>1",
   "pandas>=1.1.0",
   "matplotlib>=3.5"
 ]
